# gazebo-sim-plugins-tutorial

./: .gitignore  README.md
ros2_ws/src/tutorial_gazebo_plugins/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_gazebo_plugins/include/tutorial_gazebo_plugins/: AnimalActorFollowWaypoints.hh  JointControl.hh  LightControl.hh  LightControlDirectRos.hh  LightControlServiceWay.hh  LightControlTopicWay.hh  MoveModelDirectRos.hh
ros2_ws/src/tutorial_gazebo_plugins/src/: AnimalActorFollowWaypoints.cc  JointControl.cc  LightControl.cc  LightControlDirectRos.cc  LightControlServiceWay.cc  LightControlTopicWay.cc  MoveModelDirectRos.cc  MoveModelTopicWay.cc
ros2_ws/src/yt_tutorial_gazebo_ros/: CMakeLists.txt  package.xml
ros2_ws/src/yt_tutorial_gazebo_ros/configs/: model_topic_way_bridge.yaml
ros2_ws/src/yt_tutorial_gazebo_ros/launch/: animal_actor_follow_waypoints.py  joint_control.launch.py  light_control.launch.py  light_control_direct_ros.launch.py  light_control_service_way.launch.py  light_control_topic_way.launch.py  move_model_direct_ros.launch.py  move_model_topic_way.launch.py
ros2_ws/src/yt_tutorial_gazebo_ros/models/dog_walk/: model.config  model.sdf
ros2_ws/src/yt_tutorial_gazebo_ros/models/dog_walk/meshes/: dog_walk.dae
ros2_ws/src/yt_tutorial_gazebo_ros/models/puppy_walk/: model.config  model.sdf
ros2_ws/src/yt_tutorial_gazebo_ros/models/puppy_walk/meshes/: puppy_walk.dae
ros2_ws/src/yt_tutorial_gazebo_ros/worlds/: animal_actor_follow_waypoints.sdf  joint_control.sdf  light_control.sdf  light_control_direct_ros.sdf  light_control_service_way.sdf  light_control_topic_way.sdf  move_model_direct_ros.sdf  move_model_topic_way.sdf
standalone_gz_sim_plugins/move_model_system_plugin/: CMakeLists.txt  MoveModel.cc  MoveModel.hh  MoveModelTopicWay.cc  move_model_world.sdf  move_model_world_topicway.sdf
standalone_gz_sim_plugins/move_model_topicway_pimp_plugin/: CMakeLists.txt  MoveModelTopicWayPimp.cc  MoveModelTopicWayPimp.hh  move_model_world_topicway_pimp.sdf
standalone_gz_sim_plugins/move_model_topicway_system_plugin/: CMakeLists.txt  MoveModelTopicWay.cc  MoveModelTopicWay.hh  move_model_world_topicway.sdf
standalone_gz_sim_plugins/print_entity_system_plugin/: CMakeLists.txt  PrintEntitySystemPlugin.cc  PrintEntitySystemPlugin.hh  print_entity_system_plugin.sdf
