<package format="3">
  <name>yt_tutorial_gazebo_ros</name>
  <version>0.1.0</version>
  <description>gazebo ros related pkg</description>
  <maintainer email="todo@todo.com">hrithik verma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>